[package]
name = "libsqlite3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsqlite3-sys = { version = ">=0.23, <0.24.0", features = ["bundled"]}

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rusqlite = "0.26"
